perf: 优化图标与内容

--- a/packages/components/menu/index.less
+++ b/packages/components/menu/index.less
@@ -4,8 +4,13 @@
   display: flex;
   color: #333;
   flex-direction: column;
+  transition: width 0.2s ease-in-out;
 
   &.horizontal-mode {
     flex-direction: row;
+  }
+
+  &.is-collapse {
+    width: 50px !important;
   }
 }
