--- a/packages/components/menuItem/index.less
+++ b/packages/components/menuItem/index.less
@@ -2,6 +2,7 @@
 
 .@{namespace}-menu-item {
   font-size: 14px;
+  line-height: 2em;
   color: @color-text-regular;
   cursor: pointer;
 
@@ -9,7 +10,6 @@
     display: flex;
     align-items: center;
     padding: 0 10px;
-    line-height: 2;
 
     &:hover {
       color: @primary-color;
