--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -4,6 +4,8 @@
 @success-color: #4caf50;
 @warning-color: #ff9800;
 @danger-color: #ff4d4f;
+@border-color: #dcdfe6;
+@disabled-color: #f5f7fa;
 
 // font color
 @color-text-primary: #303133;
@@ -18,6 +20,10 @@
 @btn-warn-color: @warning-color;
 @btn-error-color: @danger-color;
 @btn-disabled-text-color: @color-text-secondary;
+
+// menu
+@menu-bg-color: #fff;
+@menu-aside-color: @border-color;
 
 // table
 @table-text-color: @color-text-regular;
