perf: 优化菜单的功能

--- a/packages/components/menuItem/index.less
+++ b/packages/components/menuItem/index.less
@@ -85,6 +85,7 @@
     color: @primary-color;
   }
   &.is-exact-active {
+    color: @primary-color;
     & > .@{namespace}-menu-item--header {
       background-color: rgba(@primary-color, 0.05);
     }
