--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -21,6 +21,12 @@
 @btn-error-color: @danger-color;
 @btn-disabled-text-color: @color-text-secondary;
 
+// input
+@input-border-color: @border-color;
+@input-hover-color: @primary-color;
+@input-focus-color: @primary-color;
+@input-disabled-color: @disabled-color;
+
 // menu
 @menu-bg-color: #fff;
 @menu-aside-color: @border-color;
