--- a/packages/components/tagGroup/index.less
+++ b/packages/components/tagGroup/index.less
@@ -1,6 +1,9 @@
 @import '../../styles/var.less';
 
 .@{namespace}-tag-group {
+  border: 1px solid #eee;
+  border-radius: 3px;
+
   .tag-button,
   .tag-input {
     display: inline-block;
@@ -13,9 +16,6 @@
 
   .vc-tag {
     margin: 0 5px 5px 0;
-  }
-
-  .tag-button {
   }
 
   .tag-input {
