--- a/packages/components/input/index.less
+++ b/packages/components/input/index.less
@@ -1,5 +1,4 @@
-@import '../../styles/var.less';
-@placeholderColor: #c0c4cc;
+@import '../../styles/theme.less';
 
 .vc-input {
   position: relative;
@@ -8,9 +7,9 @@
   vertical-align: middle;
   align-items: stretch;
   box-sizing: border-box;
-  border: 1px solid @input-border-color;
+  border: 1px solid var(--vc-input-border-color);
   border-radius: 0.25em;
-  background: #fff;
+  background: var(--vc-input-bg);
   transition: border-color 0.2s ease-out, box-shadow 0.2s ease-out;
   will-change: border-color, box-shadow;
   cursor: text;
@@ -25,7 +24,7 @@
   }
   &.is-disabled {
     cursor: not-allowed;
-    background-color: @input-disabled-color;
+    background: var(--vc-input-bg);
   }
 
   &__suffix-icon,
@@ -50,6 +49,7 @@
   &__text {
     -webkit-appearance: none;
     width: 100%;
+    color: var(--vc-input-color);
     border: 0;
     outline: none;
     background: transparent;
@@ -61,7 +61,7 @@
     flex: 1;
 
     &::-webkit-input-placeholder {
-      color: @placeholderColor;
+      color: var(--vc-input-placeholder-color);
     }
 
     &::-ms-reveal,
@@ -83,7 +83,7 @@
     }
 
     &::-webkit-input-placeholder {
-      color: @placeholderColor;
+      color: var(--vc-input-placeholder-color);
     }
   }
 
@@ -128,20 +128,20 @@
     padding: 0 10px;
     align-items: center;
     color: #777;
-    background-color: #f5f5f5;
+    background-color: transparent;
     box-sizing: border-box;
   }
 
   &__prepend {
     border-top-left-radius: inherit;
     border-bottom-left-radius: inherit;
-    border-right: 1px solid #dcdfe6;
+    border-right: 1px solid var(--vc-input-border-color);
   }
 
   &__append {
     border-top-right-radius: inherit;
     border-bottom-right-radius: inherit;
-    border-left: 1px solid #dcdfe6;
+    border-left: 1px solid var(--vc-input-border-color);
   }
 
   &__num-length {
