--- a/packages/components/input/index.less
+++ b/packages/components/input/index.less
@@ -1,30 +1,30 @@
 @import '../../styles/theme.less';
 
-.vc-input {
+.@{namespace}-input {
   position: relative;
   display: flex;
   padding: 0;
   vertical-align: middle;
   align-items: stretch;
   box-sizing: border-box;
-  border: 1px solid var(--vc-input-border-color);
+  border: 1px solid e('var(@{input}-border-color)');
   border-radius: 0.25em;
-  background: var(--vc-input-bg);
+  background: e('var(@{input}-bg)');
   transition: border-color 0.2s ease-out, box-shadow 0.2s ease-out;
   will-change: border-color, box-shadow;
   cursor: text;
 
   &:hover {
-    border-color: @input-hover-color;
+    border-color: e('var(@{input}-hover-color)');
   }
   &:focus-within,
   &.is-focus {
-    border-color: @input-focus-color;
+    border-color: e('var(@{input}-hover-color)');
     box-shadow: 0 0 0 2px rgba(33, 150, 243, 0.35);
   }
   &.is-disabled {
     cursor: not-allowed;
-    background: var(--vc-input-bg);
+    background: e('var(@{input}-disabled-bg)');
   }
 
   &__suffix-icon,
@@ -40,16 +40,16 @@
   }
 
   &__prefix-icon {
-    & + .vc-input__text {
+    & + .@{namespace}-input__text {
       padding-left: 0;
     }
   }
 
   &__textarea,
   &__text {
-    -webkit-appearance: none;
+    appearance: none;
     width: 100%;
-    color: var(--vc-input-color);
+    color: e('var(@{input}-color)');
     border: 0;
     outline: none;
     background: transparent;
@@ -61,7 +61,7 @@
     flex: 1;
 
     &::-webkit-input-placeholder {
-      color: var(--vc-input-placeholder-color);
+      color: e('var(@{input}-placeholder-color)');
     }
 
     &::-ms-reveal,
@@ -83,7 +83,7 @@
     }
 
     &::-webkit-input-placeholder {
-      color: var(--vc-input-placeholder-color);
+      color: e('var(@{input}-placeholder-color)');
     }
   }
 
@@ -92,7 +92,7 @@
     display: flex;
     padding: 0 3px;
     align-items: center;
-    color: #333;
+    color: e('var(@{input}-color)');
     cursor: pointer;
     transition: opacity 0.2s ease-out;
   }
@@ -109,11 +109,11 @@
   &__clearable {
     opacity: 0;
 
-    .vc-input:hover & {
-      opacity: 0.2;
+    .@{namespace}-input:hover & {
+      opacity: 0.4;
 
       &:hover {
-        opacity: 0.5;
+        opacity: 0.8;
       }
     }
 
@@ -135,13 +135,13 @@
   &__prepend {
     border-top-left-radius: inherit;
     border-bottom-left-radius: inherit;
-    border-right: 1px solid var(--vc-input-border-color);
+    border-right: 1px solid e('var(@{input}-border-color)');
   }
 
   &__append {
     border-top-right-radius: inherit;
     border-bottom-right-radius: inherit;
-    border-left: 1px solid var(--vc-input-border-color);
+    border-left: 1px solid e('var(@{input}-border-color)');
   }
 
   &__num-length {
