--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -1,4 +1,15 @@
+// onLine: http://lesscss.org/less-preview/
+// 声名类名
 @namespace: vc;
+@bg: e('--@{namespace}-bg');
+@disBg: e('--@{namespace}-disabled-bg');
+@textColorPrimary: e('--@{namespace}-text-color-primary');
+@textColorRegular: e('--@{namespace}-text-color-regular');
+@textColorSecondary: e('--@{namespace}-text-color-secondary');
+@borderColor: e('--@{namespace}-border-color');
+
+@placeholderColor: e('--@{namespace}-placeholder-color');
+@primaryColor: e('--@{namespace}-primary-color');
 
 @primary-color: #09f;
 @success-color: #4caf50;
@@ -6,6 +17,9 @@
 @danger-color: #ff4d4f;
 @border-color: #dcdfe6;
 @disabled-color: #f5f7fa;
+
+@input: e('--@{namespace}-input');
+@table: e('--@{namespace}-table');
 
 // font color
 @color-text-primary: #303133;
@@ -21,19 +35,9 @@
 @btn-error-color: @danger-color;
 @btn-disabled-text-color: @color-text-secondary;
 
-// input
-@input-border-color: @border-color;
-@input-hover-color: @primary-color;
-@input-focus-color: @primary-color;
-@input-disabled-color: @disabled-color;
-
 // menu
 @menu-bg-color: #fff;
 @menu-aside-color: @border-color;
-
-// table
-@table-text-color: @color-text-regular;
-@table-border-color: rgba(0, 0, 0, 0.1);
 
 // tag
 @tag-text-color: @color-text-secondary;
