--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -20,6 +20,7 @@
 
 @input: e('--@{namespace}-input');
 @table: e('--@{namespace}-table');
+@layer: e('--@{namespace}-layer');
 
 // font color
 @color-text-primary: #303133;
