--- a/packages/components/layer/index.less
+++ b/packages/components/layer/index.less
@@ -7,7 +7,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: e('var(@{layer}-mod-bg)');
   z-index: 1000;
   isolation: isolate;
   overflow: auto;
