--- a/packages/styles/transition.less
+++ b/packages/styles/transition.less
@@ -2,7 +2,7 @@
 .vc-fade-enter-active,
 .vc-fade-leave-active {
   opacity: 1;
-  transition: opacity .3s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: opacity 0.3s cubic-bezier(0.23, 1, 0.32, 1);
   transform-origin: center top;
 }
 .vc-fade-enter-from,
@@ -14,8 +14,7 @@
 .vc-zoom-in-top-leave-active {
   opacity: 1;
   transform: scaleY(1);
-  transition: 
-    transform 400ms cubic-bezier(0.23, 1, 0.32, 1), 
+  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1),
     opacity 400ms cubic-bezier(0.23, 1, 0.32, 1);
   transform-origin: center top;
 }
@@ -25,13 +24,12 @@
   transform: scaleY(0);
 }
 
-
 .vc-fade-animate-enter-active {
-  animation: vc-animate-fade-in .4s;
+  animation: vc-animate-fade-in 0.3s;
 }
 
 .vc-fade-animate-leave-active {
-  animation: vc-animate-fade-out .4s;
+  animation: vc-animate-fade-out 0.3s;
 }
 
 @keyframes vc-animate-fade-in {
@@ -53,22 +51,22 @@
 }
 
 .vc-backdrop-animate-enter-active {
-  animation: vc-backdrop-black-animate-enter .35s;
+  animation: vc-backdrop-black-animate-enter 0.35s;
 }
 @keyframes vc-backdrop-black-animate-enter {
   from {
     background: rgba(0, 0, 0, 0);
   }
   to {
-    background: rgba(0, 0, 0, .1);
+    background: rgba(0, 0, 0, 0.1);
   }
 }
 .vc-backdrop-animate-leave-active {
-  animation: vc-backdrop-black-animate-leave .35s;
+  animation: vc-backdrop-black-animate-leave 0.35s;
 }
 @keyframes vc-backdrop-black-animate-leave {
   from {
-    background: rgba(0, 0, 0, .1);
+    background: rgba(0, 0, 0, 0.1);
   }
   to {
     background: rgba(0, 0, 0, 0);
@@ -76,55 +74,55 @@
 }
 
 .vc-fade-down-animate-enter-active {
-  animation: vc-animate-fade-down-in .3s;
+  animation: vc-animate-fade-down-in 0.3s;
 }
 
 .vc-fade-down-animate-leave-active {
-  animation: vc-animate-fade-down-out .3s;
+  animation: vc-animate-fade-down-out 0.3s;
 }
 
 @keyframes vc-animate-fade-down-in {
   0% {
     opacity: 0;
-    transform: translateY(-30px)
+    transform: translateY(-30px);
   }
   100% {
     opacity: 1;
-    transform: translateY(0px)
+    transform: translateY(0px);
   }
 }
 @keyframes vc-animate-fade-down-out {
   0% {
     opacity: 1;
-    transform: translateY(0px)
+    transform: translateY(0px);
   }
   100% {
     opacity: 0;
-    transform: translateY(-30px)
+    transform: translateY(-30px);
   }
 }
 // 动画
 .vc-scale-enter-active {
-  animation: vc-animate-scale-in .4s;
-} 
+  animation: vc-animate-scale-in 0.4s;
+}
 .vc-scale-leave-active {
-  animation: vc-animate-scale-out .4s;
+  animation: vc-animate-scale-out 0.4s;
 }
 
 @keyframes vc-animate-scale-in {
   0% {
-    transform: scale(.15)
+    transform: scale(0.15);
   }
   100% {
-    transform: scale(1)
+    transform: scale(1);
   }
 }
 
 @keyframes vc-animate-scale-out {
   0% {
-    transform: scale(1)
+    transform: scale(1);
   }
   100% {
-    transform: scale(.15)
+    transform: scale(0.15);
   }
 }
