--- a/packages/components/menu/index.less
+++ b/packages/components/menu/index.less
@@ -4,6 +4,7 @@
   display: flex;
   color: #333;
   flex-direction: column;
+  width: calc(var(--w) * 1px);
   transition: width 0.2s ease-in-out;
   background-color: @menu-bg-color;
 
