--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -46,3 +46,8 @@
 @tag-success-color: @success-color;
 @tag-warning-color: @warning-color;
 @tag-danger-color: @danger-color;
+
+// collapseItem
+@collapse-border-color: @borderColor;
+@collapse-header-color: @textColorPrimary;
+@collapse-disabled-color: @textColorSecondary;
