--- a/packages/components/collapse/index.less
+++ b/packages/components/collapse/index.less
@@ -1,3 +1,5 @@
-.vc-collapse {
-  border-bottom: 1px solid #ebeef5;
+@import '../../styles/var.less';
+
+.@{namespace}-collapse {
+  border-bottom: 1px solid var(@collapse-border-color);
 }
