--- a/packages/components/tabs/index.less
+++ b/packages/components/tabs/index.less
@@ -14,7 +14,9 @@
 
   // vc-tabs--nav
   &--nav {
-    float: left;
+    display: flex;
+    gap: 10px;
+    // float: left;
     position: relative;
     margin: 0;
     padding: 0;
@@ -26,12 +28,15 @@
 
     .vc-tabs--item {
       display: inline-block;
-      padding: 0px 15px;
+      margin: 0;
+      padding: 0 10px;
       font-size: 14px;
       line-height: 3em;
       color: @color-text-regular;
       user-select: none;
       cursor: pointer;
+      border-bottom: 2px solid transparent;
+      box-sizing: border-box;
       transition: color 0.3s;
 
       .vc-icon-close {
@@ -42,6 +47,7 @@
 
       &.is-active {
         color: #09f;
+        border-color: currentColor;
 
         .vc-icon-close {
           opacity: 0.7;
@@ -75,7 +81,7 @@
 .vc-tabs--header {
   display: flex;
   width: 100%;
-  border-bottom: 2px solid #ddd;
+  border-bottom: 1px solid #ddd;
   // background: rgb(144, 206, 248);
 }
 
