--- a/packages/components/colorPicker/index.less
+++ b/packages/components/colorPicker/index.less
@@ -18,7 +18,7 @@
       height: 100%;
       border-radius: 3px;
       box-sizing: border-box;
-      border: 1px solid rgba(0, 0, 0, .4);
+      border: 1px solid rgba(0, 0, 0, 0.4);
       cursor: pointer;
     }
 
@@ -32,16 +32,17 @@
     position: fixed;
     z-index: 2000;
     box-sizing: content-box;
-    background-color: rgba(255, 255, 255, .8);
+    background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(5px);
     width: 230px;
     border-radius: 4px;
-    box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
+    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
   }
 
   &__display-panel {
     display: flex;
     padding: 10px;
+    gap: 10px;
 
     .color-box {
       position: relative;
@@ -52,16 +53,16 @@
       overflow: hidden;
       cursor: pointer;
       background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAIAAADZF8uwAAAAGUlEQVQYV2M4gwH+YwCGIasIUwhT25BVBADtzYNYrHvv4gAAAABJRU5ErkJggg==);
-      
+
       span {
         display: block;
         width: 100%;
         height: 100%;
         border-radius: 20px;
         box-sizing: border-box;
-        border: 1px solid rgba(0,0,0,.1);
+        border: 1px solid rgba(0, 0, 0, 0.1);
       }
-      
+
       i {
         position: absolute;
         top: 50%;
@@ -71,7 +72,7 @@
         transform: translate(-50%, -50%);
         opacity: 0;
         text-shadow: 1px 1px 10px black;
-        transition: opacity .3s;
+        transition: opacity 0.3s;
       }
 
       &:hover i {
@@ -94,11 +95,20 @@
       height: 10px;
       border-radius: 100%;
       background-color: #fff;
-      box-shadow: 1px 1px 3px rgba(0, 0, 0, .4);
+      box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
     }
 
     &.is-hsv {
-      background: linear-gradient(90deg,red 0,#ff0 17%,#0f0 33%,#0ff 50%,#00f 67%,#f0f 83%,red);
+      background: linear-gradient(
+        90deg,
+        red 0,
+        #ff0 17%,
+        #0f0 33%,
+        #0ff 50%,
+        #00f 67%,
+        #f0f 83%,
+        red
+      );
     }
   }
 }
@@ -110,9 +120,8 @@
     width: 100%;
     height: 125px;
     user-select: none;
-    background: 
-      linear-gradient(0deg,#000,transparent),
-      linear-gradient(90deg,#fff,hsla(0,0%,100%,0));
+    background: linear-gradient(0deg, #000, transparent),
+      linear-gradient(90deg, #fff, hsla(0, 0%, 100%, 0));
     overflow: hidden;
   }
 
@@ -160,7 +169,7 @@
       border: 1px solid #ddd;
       outline: none;
       transition: border-color 400ms;
-    
+
       &::-webkit-inner-spin-button {
         -webkit-appearance: none;
         appearance: none;
@@ -180,12 +189,14 @@
 
 .vc-color-picker__control-model {
   flex: 1;
-  margin: 0 0 0 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 7px;
 }
 .vc-color-picker__alpha {
   width: 100%;
   height: 10px;
-  margin-top: 7px;
   border-radius: 5px;
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAIAAADZF8uwAAAAGUlEQVQYV2M4gwH+YwCGIasIUwhT25BVBADtzYNYrHvv4gAAAABJRU5ErkJggg==);
 
