--- a/packages/components/upload/index.less
+++ b/packages/components/upload/index.less
@@ -16,12 +16,12 @@
     display: grid;
     padding: 5px;
     height: 30px;
-    grid-template: 1fr 5px ~"/" 1fr 40px;
+    grid-template: 1fr 5px ~'/' 1fr 40px;
     border-radius: 2px;
-    transition: background .35s;
+    transition: background 0.35s;
 
     div.vc-progress {
-      grid-column: 1 ~"/" 3;
+      grid-column: 1 ~'/' 3;
       margin: 0;
     }
 
@@ -59,13 +59,13 @@
         overflow: hidden;
         box-sizing: border-box;
         cursor: pointer;
-        transition: width .35s ease-out, opacity .35s ease-out;
+        transition: width 0.35s ease-out, opacity 0.35s ease-out;
       }
     }
-    
+
     &:hover {
-      background: rgba(0, 0, 0, .05);
-      
+      background: rgba(0, 0, 0, 0.05);
+
       .remove {
         width: 1.2em;
         opacity: 1;
@@ -84,11 +84,11 @@
   &__btns-btn {
     display: inline-block;
 
-    & + [class$="__btns-btn"] {
+    & + [class$='__btns-btn'] {
       margin-left: 10px;
     }
   }
-  
+
   &__btns-area {
     margin-bottom: 5px;
     .vc-button {
@@ -100,6 +100,7 @@
 
 // 头像
 .vc-upload-avatar {
+  position: relative;
   display: inline-flex;
   width: 200px;
   height: 200px;
@@ -111,10 +112,10 @@
   cursor: pointer;
   will-change: box-shadow;
   overflow: hidden;
-  transition: box-shadow .3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out;
 
   &:hover {
-    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, .05);
+    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.05);
   }
 
   &__helper {
@@ -123,6 +124,17 @@
 
     i {
       font-size: 18px;
+
+      &.vc-clipboard-btn {
+        padding: 5px;
+        border-radius: 5px;
+        transition: border-color 0.3s;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+
+        &:hover {
+          border-color: rgba(0, 0, 0, 0.5);
+        }
+      }
     }
 
     p {
@@ -134,5 +146,12 @@
   img {
     width: 100%;
     height: 100%;
+  }
+
+  .clipboard-txt {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    opacity: 0;
   }
 }
