--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -47,7 +47,7 @@
 @tag-warning-color: @warning-color;
 @tag-danger-color: @danger-color;
 
-// collapseItem
+// collapse
 @collapse-border-color: @borderColor;
 @collapse-header-color: @textColorPrimary;
 @collapse-disabled-color: @textColorSecondary;
