--- a/packages/components/form/index.less
+++ b/packages/components/form/index.less
@@ -1,9 +1,7 @@
 .vc-form {
   &.inline {
-    .vc-form-item {
-      display: inline-flex;
-      margin-right: 10px;
-      vertical-align: top;
-    }
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    gap: 5px 10px;
   }
 }
