perf：优化错误状态

--- a/packages/components/formItem/index.less
+++ b/packages/components/formItem/index.less
@@ -58,14 +58,14 @@
 
   &.is-error {
     // 输入框
-    .vc-input {
-      border-color: #ff4d4f;
-    }
+    // .vc-input {
+    //   border-color: #ff4d4f;
+    // }
 
     // 计数器
-    .vc-input-number__input {
-      border-color: #ff4d4f;
-    }
+    // .vc-input-number__input {
+    //   border-color: #ff4d4f;
+    // }
 
     // 时间选择器
     .vc-time-picker {
