--- a/packages/components/input/index.less
+++ b/packages/components/input/index.less
@@ -27,6 +27,15 @@
     background: e('var(@{input}-disabled-bg)');
   }
 
+  .is-error & {
+    border-color: #ff4d4f;
+
+    &:focus-within,
+    &.is-focus {
+      box-shadow: 0 0 0 2px rgba(#ff4d4f, 0.2);
+    }
+  }
+
   &__suffix-icon,
   &__prefix-icon {
     display: flex;
