--- a/packages/styles/theme.less
+++ b/packages/styles/theme.less
@@ -10,6 +10,8 @@
   @{placeholderColor}: #c0c4cc;
 
   @{primaryColor}: @primary-color;
+  @{backdropFilter}: saturate(180%) blur(20px);
+  @{backdropFilterBg}: rgba(#fff, 0.8);
 
   // input
   @{input}-bg: e('var(@{bg})');
@@ -47,6 +49,9 @@
   @{textColorRegular}: #cfd3dc; // --vc-text-color-regular
   @{borderColor}: #555;
   @{placeholderColor}: #555;
+
+  @{backdropFilter}: saturate(180%) blur(20px);
+  @{backdropFilterBg}: rgba(22, 22, 23, 0.8);
 
   // input
   @{input}-bg: e('var(@{bg})');
