--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -7,6 +7,8 @@
 @textColorRegular: e('--@{namespace}-text-color-regular');
 @textColorSecondary: e('--@{namespace}-text-color-secondary');
 @borderColor: e('--@{namespace}-border-color');
+@backdropFilter: e('--@{namespace}-backdrop-filter');
+@backdropFilterBg: e('--@{namespace}-backdrop-filter-bg');
 
 @placeholderColor: e('--@{namespace}-placeholder-color');
 @primaryColor: e('--@{namespace}-primary-color');
