feat： 添加更多属性功能

--- a/packages/components/collapse/index.less
+++ b/packages/components/collapse/index.less
@@ -2,4 +2,12 @@
 
 .@{namespace}-collapse {
   border-bottom: 1px solid var(@collapse-border-color);
+
+  &.no-border {
+    border: none;
+
+    .@{namespace}-collapse-item {
+      border: none;
+    }
+  }
 }
