--- a/packages/styles/var.less
+++ b/packages/styles/var.less
@@ -16,7 +16,7 @@
 @primary-color: #09f;
 @success-color: #4caf50;
 @warning-color: #ff9800;
-@danger-color: #ff4d4f;
+@danger-color: #c42c1d;
 @border-color: #dcdfe6;
 @disabled-color: #f5f7fa;
 
